<resources>
    <string name="app_name">Culture</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="culture">Culture Toulouse</string>
    <string name="all_fields_are_required">All fields are required!</string>
    <string name="wrong_mail_or_password">Wrong E-mail or Password</string>
    <string name="confirmation_password_does_not_match">Confirmation password does not match!</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="firstname">FirstName</string>
    <string name="create_new_account">Create new Account</string>
    <string name="lastname">Lastname</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="need_a_new_account">Need a new Account?</string>
    <string name="welcome">Welcome </string>
    <string name="error">Error :</string>
    <string name="your_e_mail">Your E-mail</string>
    <string name="your_password">Your Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="AddFavorites">Add to favorites with success !</string>
    <string name="back_tp_map">Back to Map</string>
    <string name="shoot">shoot</string>
    <string name="gallery">Gallery</string>
    <string name="todo">todoing</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="hello_card">Hello Card</string>
    <string name="liste_des_musees">Liste des musées</string>
    <string name="liste_des_evenements">Liste des évènements</string>
    <string name="favoris">Favoris</string>
    <string name="meters">m</string>
    <string name="connexion">Connexion</string>
    <string name="se_connecter_avec_google">Se connecter avec Google</string>
    <string name="cr_er_un_nouveau_compte">Créer un nouveau compte </string>
    <string name="revenir_la_carte">Revenir à la carte</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="inscrire">Créer un nouveau compte</string>
    <string name="avez_vous_d_ja_un_compte">Avez vous déja un compte?</string>
    <string name="votre_e_mail">Votre e-mail</string>
    <string name="votre_mot_de_passe">Votre mot de passe</string>
    <string name="prendre_une_photo">Prendre une photo</string>
    <string name="galerie">Galerie</string>
    <string name="communaut">Communauté</string>
    <string name="albums">Albums</string>
</resources>
